--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,13 +4,24 @@
   </h1>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-body">
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-    eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-    dolor sit amet.
-  </div>
-</div>
+<table class="table table-striped table-hover table-responsive">
+  <thead>
+  <tr>
+    <th>Benutzer</th>
+    <th>Titel</th>
+    <th>Code</th>
+    <th></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @schnipsels.each do |schnipsel| %>
+      <tr>
+        <td><%= schnipsel.user.username %></td>
+        <td><%= schnipsel.titel %></td>
+        <td><%= schnipsel.code %></td>
+        <td><%= link_to 'Show', schnipsel, {class: 'btn btn-default', role: 'button'} %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
