--- a/app/views/layouts/navigation/_navigation_links.html.erb
+++ b/app/views/layouts/navigation/_navigation_links.html.erb
@@ -1,2 +1,4 @@
-<li><%= link_to 'Meine Schnipsel', schnipsels_path %></li>
-<li> <%= link_to 'Neuer Schnipsel', new_schnipsel_path %></li>
+<% if user_signed_in? %>
+    <li><%= link_to 'Meine Schnipsel', schnipsels_path %></li>
+    <li> <%= link_to 'Neuer Schnipsel', new_schnipsel_path %></li>
+<% end %>
