--- a/app/views/schnipsels/_form.html.erb
+++ b/app/views/schnipsels/_form.html.erb
@@ -1,27 +1,31 @@
 <%= form_with(model: schnipsel, local: true) do |form| %>
-  <% if schnipsel.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(schnipsel.errors.count, "error") %> prohibited this schnipsel from being saved:</h2>
+    <% if schnipsel.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(schnipsel.errors.count, "error") %> prohibited this schnipsel from being saved:</h2>
 
-      <ul>
-      <% schnipsel.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% schnipsel.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :titel %>
+      <%= form.text_field :titel, id: :schnipsel_titel %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :titel %>
-    <%= form.text_field :titel, id: :schnipsel_titel %>
-  </div>
+    <div class="field">
+      <%= form.label :code %>
+      <%= form.text_area :code, id: :schnipsel_code %>
+    </div>
 
-  <div class="field">
-    <%= form.label :code %>
-    <%= form.text_area :code, id: :schnipsel_code %>
-  </div>
+    <div class="field">
+      <%= form.text_field :tag_list, value: form.object.tag_list.to_s %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+      <%= form.submit %>
+    </div>
 <% end %>
