--- a/app/views/schnipsels/_form.html.erb
+++ b/app/views/schnipsels/_form.html.erb
@@ -22,6 +22,7 @@
     </div>
 
     <div class="field">
+      <%= form.label :tag_list %>
       <%= form.text_field :tag_list, value: form.object.tag_list.to_s %>
     </div>
 
