--- a/app/views/schnipsels/new.html.erb
+++ b/app/views/schnipsels/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Schnipsel</h1>
+<div style="margin:15px">
+<h2>Neuer Schnipsel</h2>
 
 <%= render 'form', schnipsel: @schnipsel %>
 
-<%= link_to 'Back', schnipsels_path %>
+</div>
