--- a/app/assets/stylesheets/schnipsels.scss
+++ b/app/assets/stylesheets/schnipsels.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Schnipsels controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.codeSchnipsel {
+  height: 300px !important;
+}
