--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Forgot your password?</h2>
+<div style="margin:15px">
+<h3>Passwort vergessen?</h3>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -8,9 +9,10 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="actions" style="margin-left: -2px">
+    <%= f.submit "Anleitung um Passwort zurückzusetzen",class: 'btn btn-default', role: 'button'  %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
