--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,47 @@
-<h2>Sign up</h2>
+<div style="margin:15px">
+  <h3>Registrieren</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+      <div class="form-group">
+        <%= f.label :email, class: 'col-sm-1 control-label' %>
+        <div class="col-sm-2">
+          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        </div>
+      </div>
 
-    <div class="field">
-      <%= f.label :username %><br />
-      <%= f.text_field :username %>
-    </div>
+      <div class="form-group">
+        <%= f.label :username, class: 'col-sm-1 control-label' %>
+        <div class="col-sm-2">
+          <%= f.text_field :username, class: 'form-control' %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :password, class: 'col-sm-1 control-label' %>
+        <% if @minimum_password_length %>
+            <em>(Mindestens <%= @minimum_password_length %> Zeichen)</em>
+        <% end %>
+        <div class="col-sm-2"><%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <div class="form-group">
+        <%= f.label "Passwort bestätigen", class: 'col-sm-1 control-label' %>
+        <div class="col-sm-2">
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-2" style="padding-left: 15px;">
+          <%= f.submit "Registrieren", class: 'btn btn-default', role: 'button' %>
+        </div>
+      </div>
+  <% end %>
+  <div class="col-sm-1" style="padding-left: 162px;">
+    <br/><%= render "devise/shared/links" %>
+  </div><br/>
+</div>
