--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,9 +15,10 @@
  */
 /*
 *= require codemirror
-*/
-/*
 *= require codemirror/themes/dracula
+*= require codemirror/addons/fold/foldgutter
+*= require codemirror/addons/search/matchesonscrollbar
+*= require codemirror/addons/dialog/dialog
 
 */
 
