Syntax Hervorhebung kann ausgewählt und gespeichert werden.

--- a/app/views/schnipsels/edit.html.erb
+++ b/app/views/schnipsels/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Schnipsel</h1>
-
-<%= render 'form', schnipsel: @schnipsel %>
+<div style="margin:15px">
+  <h1>Editing Schnipsel</h1>
+  <%= render 'form', schnipsel: @schnipsel %>
+</div>
 
 <%= link_to 'Show', @schnipsel %> |
 <%= link_to 'Back', schnipsels_path %>
