--- a/app/views/schnipsels/_form.html.erb
+++ b/app/views/schnipsels/_form.html.erb
@@ -1,5 +1,4 @@
-
-<%= form_with(model: schnipsel, local: true, html: {style: 'margin: 15px'}) do |form| %>
+<%= form_with(model: schnipsel, local: true, html: {style: 'margin: 15px', class: 'form-horizontal'}) do |form| %>
     <% if schnipsel.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(schnipsel.errors.count, "error") %> prohibited this schnipsel from being saved:</h2>
@@ -13,26 +12,45 @@
     <% end %>
 
     <div class="form-group">
-      <%= form.label :titel %>
-      <%= form.text_field :titel, id: :schnipsel_titel, class: 'form-control' %>
-      <small class="form-text text-muted">Bitte geben Sie hier den Titel des Codeschnipsels ein!</small>
+      <%= form.label :titel, class: 'col-sm-1' %>
+      <div class="col-sm-8">
+        <%= form.text_field :titel, id: :schnipsel_titel,
+                            class: 'form-control',
+                            placeholder: 'Bitte geben Sie hier den Titel des Codeschnipsels ein!' %>
+      </div>
+
+      <%= form.label :syntax, class: 'col-sm-1' %>
+      <div class="col-sm-2">
+        <%= form.select :syntax, @syntax_definitions, {include_blank: true}, class: 'form-control' %>
+      </div>
+
+      <script type="text/javascript">
+        $("select[name='schnipsel[syntax]']").change(function (event) {
+          editor.setOption("mode", $(event.target).val());
+        });
+
+      </script>
     </div>
-
     <div class="form-group">
-      <%= form.label :code%>
+      <%= form.label :code %>
 
-      <%= form.text_area :code, id: :schnipsel_code, class: 'editor form-control codeSchnipsel' %>
+      <%= form.text_area :code, id: :schnipsel_code, class: 'editor form-control codeSchnipsel', autofocus: true %>
       <script>
-        var editor = configure_editor("schnipsel_code", false, "text/x-ruby");
+        var editor = configure_editor("schnipsel_code", false, '<%= @schnipsel.syntax%>');
       </script>
       <small class="form-text text-muted">Bitte geben Sie hier den Codeschnipsel ein!</small>
     </div>
 
     <div class="form-group">
       <%= form.label :tag_list %>
-      <%= form.text_field :tag_list, value: form.object.tag_list.to_s, class: 'form-control'%>
-      <small class="form-text text-muted">Bitte geben Sie hier Ihre Tags ein. Sehr wichtig: Die Tags müssen durch ein Komma "," getrennt werden!</small>
+      <%= form.text_field :tag_list, value: form.object.tag_list.to_s,
+                          class: 'form-control',
+                          placeholder: 'Bitte geben Sie hier Ihre Tags ein. Sehr wichtig: Die Tags müssen durch ein
+        Komma "," getrennt werden!' %>
     </div>
 
-      <%= form.submit 'Schnipsel dir einen!',class: 'btn btn-default', role: 'button'%>
+
+    <div class="form-group">
+      <%= form.submit 'Schnipsel dir einen!', class: 'btn btn-default', role: 'button' %>
+    </div>
 <% end %>
